--- a/src/components/HouseCard/HouseCard.scss
+++ b/src/components/HouseCard/HouseCard.scss
@@ -1,14 +1,17 @@
 .house {
-    padding: 10px;
+    padding: 25px;
     border: 1px solid #e8e8e8;
+    width: 350px;
+    cursor: pointer;
 
     h4 {
-        margin-bottom: 0;
+        margin: 0;
+        font-size: 25px;
     }
 
     .house-img {
-        width: 490px;
-        height: 400px;
+        height: 200px;
+        width: 100%;
 
         img {
             width: 100%;
@@ -17,6 +20,11 @@
     }
 
     .description {
+        max-width: 100%;
+        font-size: 18px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap; 
         color: #636363;
     }
 
@@ -25,9 +33,24 @@
         align-items: center;
 
         .area {
-            position: relative;
-            top: -2px;
-            padding: 0 50px;
+            display: flex;
+            align-items: center;
+            padding-right: 50px;
+        
+            .area-icon {
+                width: 14px;
+                height: 14px;
+                padding-right: 5px;
+            }
+
+            .area-text {
+                position: relative;
+                top: -2px;
+            }
         }
+    }
+
+    &:hover {
+        border-color: black;
     }
 }
