--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -8,64 +8,16 @@ html, body {
     text-align: center;
 }
 
+.scroll-content {
+    max-width: 1610px;
+    margin: 0 25px;
+}
+
 .houses {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
     margin: 0 auto;
-}
-
-.pagination {
-    z-index: 2;
-    display: flex;
-    justify-content: center;
-    padding-left: 15px;
-    padding-right: 15px;
-
-    li {
-        display: inline-block;
-        cursor: pointer;
-        border: 1px solid #e8e8e8;
-
-        &:hover {
-            background: #e8e8e8;
-        }
-
-        a {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            width: 40px;
-            height: 45px;
-
-            &:focus {
-                outline: none;
-            }
-        }
-    }
-
-    .active {
-        font-weight: bold;
-        color: blue;
-    }
-
-    .disabled {
-        &:hover {
-            background: #fff;
-            cursor: default;
-        }
-    }
-}
-
-.items-per-page {
-    position: relative;
-    top: -47px;
-    display: flex;
-    width: 150px;
-
-    p {
-        margin: 5px;
-    }
 }
 
 .error {
